# micromouse

./: .gitignore  .gitlab-ci.yml  dataflow.html
board/: board2-cache.lib  board2-rescue.lib  board2.kicad_pcb  fp-info-cache  sym-lib-table
electrical/blcd_driver/blcd_driver/: blcd_driver-cache.lib  blcd_driver.sch  blcd_driver.sch-bak  bldc_driver.dcm  bldc_driver.lib  stspin233.bck  stspin233.dcm  stspin233.lib  sym-lib-table
electrical/board/: board2.sch  fp-info-cache
firmware/: Cargo.toml  openocd.gdb  upload.sh
firmware/plot/: angles.gnuplot  plot.sh
firmware/src/: config.rs  main.rs  uart.rs  vl6180x.rs
firmware/src/motors/: left.rs  right.rs
mouse/: Cargo.toml
mouse/src/: comms.rs  config.rs  lib.rs  map.rs  maze.rs  motion.rs  mouse.rs  path.rs
non_technical/: paths.dxf
simulation/: Cargo.toml
simulation/src/: gui.rs  lib.rs  main.rs  remote.rs  simulation.rs
simulation/static/: config.js  control.js  debug.js  dom.js  graph.js  index.html  maze.js  setup.js  ui.js  worker.js
software/: Cargo.toml
software/firmware/plot/: plot.sh
software/firmware/src/: uart.rs
software/micromouse/: Cargo.toml
software/micromouse/src/: time.rs
software/micromouse_analysis/: analyze_frequency_motors.py  analyze_motors.py  analyze_step_motors.py  motor_requirements.py  requirements.txt  tune_motors.py
software/micromouse_firmware/: Cargo.toml  generate_asm.sh  generate_syms.sh  memory.x  openocd.cfg  openocd.gdb  openocd_gdb.cfg  openocd_upload.cfg  upload.sh  upload_gdb.sh  upload_openocd.sh
software/micromouse_firmware/plot/: angles.gnuplot
software/micromouse_firmware/src/: battery.rs  main.rs  system_test.rs  time.rs  uart.rs  vl6180x.rs
software/micromouse_firmware/src/motors/: left.rs  right.rs
software/micromouse_hardware/: Cargo.toml
software/micromouse_logic/: Cargo.toml
software/micromouse_logic/diagrams/: flow.dot
software/micromouse_logic/src/: bezier.rs  comms.rs  config.rs  lib.rs  localize.rs  map.rs  math.rs  maze.rs  motion.rs  mouse.rs  path.rs  test.rs
software/micromouse_logic/src/fast/: curve.rs  localize.rs  mod.rs  motion_control.rs  motion_queue.rs  motor_control.rs  path.rs  turn.rs
software/micromouse_logic/src/slow/: map.rs  maze.rs  mod.rs  motion_plan.rs  navigate.rs
software/micromouse_simulation/: Cargo.toml  build_wasm.sh  run_websocket.sh
software/micromouse_simulation/src/: lib.rs  remote.rs  simulation.rs
software/micromouse_simulation/static/: config.js  control.js  debug.js  dom.js  graph.js  maze.js  setup.js  ui.js  worker.js
software/mouse/: Cargo.toml
software/mouse/src/: motion.rs  mouse.rs
software/simulation/src/: simulation.rs
software/simulation/static/: control.js  maze.js  ui.js  worker.js
