[package]
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "micromouse"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
cortex-m-rt-macros = "0.1"
panic-halt = "0.2"
pid_control = { git = "https://github.com/mbr/pid_control-rs" }
nb = "0.1"
embedded-hal = "0.2"
libm = "0.1"
mouse = { path = "../mouse" }

[dependencies.arrayvec]
version = "0.5"
default-features = false

[dependencies.cortex-m]
version = "0.6"
features = ["const-fn"]

[dependencies.stm32f4xx-hal]
#version = "0.6"
#path = "../../stm32f4xx-hal"
git = "https://github.com/timothyhollabaugh/stm32f4xx-hal"
#version = "0.3.0"
features = ["stm32f405", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "micromouse"
test = true
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
