[workspace]

members = [
    "micromouse_hardware",
    "micromouse_firmware",
    "micromouse_logic",
    "micromouse_simulation",
]

# For embedded
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
