[package]
name = "micromouse_logic"
version = "0.1.0"
authors = ["Timothy Hollabaugh <timothyhollabaugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.1"
pid_control = { git = "https://github.com/mbr/pid_control-rs" }
typenum = "1.11"

[dependencies.itertools]
version = "0.8"
default_features = false

[dependencies.heapless]
version = "0.5"
features = ["serde"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]



[dev-dependencies]
pretty_assertions = "0.6"

